--- a/meso_tools/notebooks/process_4roi_stack.ipynb
+++ b/meso_tools/notebooks/process_4roi_stack.ipynb
@@ -96,10 +96,10 @@
     "    num_frames_chunk = tiff_array.shape[0]\n",
     "\n",
     "    # split and average 4 rois - single planes\n",
-    "    V1[i,:,:] = tiff_array[:,:image_dim,:].mean(axis=0)\n",
-    "    LM[i,:,:] = tiff_array[:,image_dim+spacer:2*image_dim+spacer,:].mean(axis=0)\n",
-    "    AM[i,:,:] = tiff_array[:,2*image_dim+2*spacer:3*image_dim+2*spacer,:].mean(axis=0)\n",
-    "    PM[i,:,:] = tiff_array[:,3*image_dim+3*spacer:,:].mean(axis=0)\n",
+    "    , V1[i,:,:] = mt.align_pahase(tiff_array[:,:image_dim,:].mean(axis=0))\n",
+    "    , LM[i,:,:] = mt.align_phase(tiff_array[:,image_dim+spacer:2*image_dim+spacer,:].mean(axis=0))\n",
+    "    , AM[i,:,:] = mt.align_phase(tiff_array[:,2*image_dim+2*spacer:3*image_dim+2*spacer,:].mean(axis=0))\n",
+    "    , PM[i,:,:] = mt.align_phase(tiff_array[:,3*image_dim+3*spacer:,:].mean(axis=0))\n",
     "    \n",
     "    mean[0,i] = np.mean(V1[i,:,:],axis=(0,1))\n",
     "    mean[1,i] = np.mean(LM[i,:,:],axis=(0,1))\n",
@@ -153,27 +153,6 @@
     "mt.write_tiff(am_path, AM.astype(np.int16))\n",
     "mt.write_tiff(pm_path, PM.astype(np.int16))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
