plot containers better plot annotation

--- a/meso_tools/notebooks/plot_containers.ipynb
+++ b/meso_tools/notebooks/plot_containers.ipynb
@@ -160,8 +160,9 @@
     "            mean_proj_path = os.path.join(write_folder, f'{exp}_avg_int.tif')\n",
     "            im = mt.read_tiff(mean_proj_path)\n",
     "            ax = fig.add_subplot(1, num_sessions_max, i)\n",
+    "            im = im.astype(np.int16)\n",
     "            ax.imshow(im, cmap='jet')\n",
-    "            ax.set_title(f\"{session}\\n{exp}\", fontsize=22)\n",
+    "            ax.set_title(f\"ses {session}, exp {exp}\\nmin {np.round(np.min(im),1)} max {np.round(np.max(im),1)}\\n mean {np.round(np.mean(im),1)}\", fontsize=22)\n",
     "            ax.axis('off')\n",
     "            i+=1\n",
     "        else:\n",
