--- a/meso_tools/notebooks/dendritic_stacks_qc.ipynb
+++ b/meso_tools/notebooks/dendritic_stacks_qc.ipynb
@@ -63,13 +63,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_with_2ROI_stacks = r\"D:\\\\dev_data\\OS_dendrites_stacks_pilots\\628518\"\n",
+    "surface_soma_stack1_path = r\"D:\\\\dev_data\\OS_dendrites_stacks_pilots\\628518\\20220816_628518_surface_soma_V1_Visl_00001.tif\"\n",
+    "surface_soma_stack2_path = r\"D:\\\\dev_data\\OS_dendrites_stacks_pilots\\628518\\20220812_628518_surface_soma_AM_PM_00001.tif\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_with_2ROI_stacks = \"E:\\\\dev_data\\\\OS_dendrites_stacks_pilots\\\\621602\"\n",
-    "surface_soma_stack1_path = \"E:\\\\dev_data\\\\OS_dendrites_stacks_pilots\\\\621602\\\\621602_V1_LM_surface_soma_00001.tif\"\n",
-    "surface_soma_stack2_path = \"\"\n",
     "roi_names_2rois = ['V1', 'LM', 'AM', 'PM']"
    ]
   },
@@ -292,13 +300,7 @@
       "Loading 193th chunk, frames 19300 to 19400\n",
       "Loading 194th chunk, frames 19400 to 19500\n",
       "Loading 195th chunk, frames 19500 to 19600\n",
-      "Loading 196th chunk, frames 19600 to 19700\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading 196th chunk, frames 19600 to 19700\n",
       "Loading 197th chunk, frames 19700 to 19800\n",
       "Loading 198th chunk, frames 19800 to 19900\n",
       "Loading 199th chunk, frames 19900 to 20000\n",
@@ -681,18 +683,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# correct bidi scan phase in stacks\n",
-    "rois_corr = []\n",
-    "for roi in rois:\n",
-    "    roi_corr.appen(mt.align_phase_stack(roi))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# write stacks with averaged frames to disk\n",
     "for i, roi_name in enumerate(roi_names_2rois):\n",
     "    roi_path = os.path.join(folder_with_2ROI_stacks, f\"{roi_name}_avg.tiff\")\n",
@@ -703,6 +693,24 @@
     "    \n",
     "    var_path = os.path.join(folder_with_2ROI_stacks, f\"{roi_name}_var.dict\")\n",
     "    sc.saveobj(var_path, variances[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 3.0 read means and avgs from disk: \n",
+    "means = []\n",
+    "variances = []\n",
+    "for i, roi_name in enumerate(roi_names_2rois):\n",
+    "\n",
+    "    mean_path = os.path.join(folder_with_2ROI_stacks, f\"{roi_name}_mean.dict\")\n",
+    "    means.append(sc.loadobj(mean_path))\n",
+    "    \n",
+    "    var_path = os.path.join(folder_with_2ROI_stacks, f\"{roi_name}_var.dict\")\n",
+    "    variances.append(sc.loadobj(var_path))"
    ]
   },
   {
@@ -737,9 +745,9 @@
     "# pl.plot(np.array(four_roi_mean).T)\n",
     "for i, mean in enumerate(four_roi_mean):\n",
     "    line, = pl.plot(mean.T)\n",
-    "    line.set_label(roi_names_4rois[i])\n",
+    "    line.set_label(roi_names_4roi[i])\n",
     "    max_val = np.max(mean.T)\n",
-    "    print(f\"Max value for {roi_names_4rois[i]} is {max_val}, at plane number {np.where(mean.T == max_val)[0][0]}\")\n",
+    "    print(f\"Max value for {roi_names_4roi[i]} is {max_val}, at plane number {np.where(mean.T == max_val)[0][0]}\")\n",
     "pl.legend()\n",
     "\n",
     "#plotting current stack data\n",
@@ -748,9 +756,9 @@
     "print(f\"\\nMax intensity values for current stacks: \\n\")\n",
     "for i, mean in enumerate(means):\n",
     "    line, = pl.plot(mean)\n",
-    "    line.set_label(roi_names_2roi[i])\n",
+    "    line.set_label(roi_names_2rois[i])\n",
     "    max_val = np.max(mean.T)\n",
-    "    print(f\"Max value for {roi_names_2roi[i]} is {max_val}, at plane number {np.where(mean.T == max_val)[0][0]}\")\n",
+    "    print(f\"Max value for {roi_names_2rois[i]} is {max_val}, at plane number {np.where(mean.T == max_val)[0][0]}\")\n",
     "pl.ylabel('mean pixel value',fontsize=15)\n",
     "pl.xlabel('plane',fontsize=15)\n",
     "pl.legend()"
@@ -780,7 +788,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   },
   "vscode": {
    "interpreter": {
