stack stitching and averaging updated

--- a/meso_tools/notebooks/plot_containers_on_the_rig.ipynb
+++ b/meso_tools/notebooks/plot_containers_on_the_rig.ipynb
@@ -57,17 +57,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f655c398",
-   "metadata": {},
-   "source": [
-    "### This will regenerate max int projections from motion corrected stacks where they don't exist "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cc8871f",
+   "id": "2860fb1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +83,24 @@
     "            num_sessions_max = num_sessions\n",
     "            sessions_max = mouse_table.session_id[mouse_table.container_id==container].drop_duplicates()\n",
     "\n",
-    "    print(f\"max number of sessions per container for this mouse is {num_sessions_max}\")\n",
-    "\n",
+    "    print(f\"max number of sessions per container for this mouse is {num_sessions_max}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f655c398",
+   "metadata": {},
+   "source": [
+    "### This will regenerate max int projections from motion corrected stacks where they don't exist "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cc8871f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    # make sure max projections exist for all experiments in max_proj_folder\n",
     "    experiments = mouse_table.exp_id.values\n",
     "\n",
@@ -224,6 +232,13 @@
     "                ax.imshow(im, cmap='jet', vmin=0, vmax = v_max)\n",
     "                ax.set_title(f\"ses {session}, exp {exp}\\nSNR {snr} ph_flux {photon_flux}\\n accutance {accutance}\", fontsize=22)\n",
     "                ax.axis('off')\n",
+    "                \n",
+    "                if exp in exps_repeating : ## I ADDED THIS\n",
+    "                    autoAxis = ax.axis()\n",
+    "                    rec = pl.Rectangle((autoAxis[0]-0.7,autoAxis[2]-0.2),(autoAxis[1]-autoAxis[0])+1,(autoAxis[3]-autoAxis[2])+0.4,fill=False,lw=7,color='r')\n",
+    "                    rec = ax.add_patch(rec)\n",
+    "                    rec.set_clip_on(False)\n",
+    "                \n",
     "                i+=1\n",
     "            else:\n",
     "                ax = fig.add_subplot(1, num_sessions_max, i)\n",
