--- a/meso_tools/notebooks/fullfield_stitching.ipynb
+++ b/meso_tools/notebooks/fullfield_stitching.ipynb
@@ -50,10 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "path_to_tiff = f\"D:\\\\scanimage_ophys\\\\data/{session_id}\\\\{session_id}_fullfield.tiff\"\n",
     "\n",
-    "GAP = 24\n",
-    "\n",
-    "path_to_tiff = f\"E:\\\\scanimage_ophys\\\\data/{session_id}\\\\{session_id}_fullfield.tiff\"\n",
     "tiff_array = read_tiff(path_to_tiff)\n",
     "\n",
     "meta = get_meta(path_to_tiff)\n",
@@ -63,14 +61,13 @@
     "ff_meta_dict = check_meta(ff_meta_dict)\n",
     "\n",
     "check_tiff(tiff_array, ff_meta_dict)\n",
-    "\n",
-    "output_tiff_shape = check_tiff(tiff_array, ff_meta_dict)\n",
+    "output_tiff_shape, gap = check_tiff(tiff_array, ff_meta_dict)\n",
     "\n",
     "ff_averaged_tiff = average_tiff(tiff_array, ff_meta_dict)\n",
     "\n",
-    "ff_stitched_tiff, ff_meta_dict = stitch_tiff(ff_averaged_tiff, ff_meta_dict, output_tiff_shape)\n",
+    "ff_stitched_tiff, ff_meta_dict = stitch_tiff(ff_averaged_tiff, ff_meta_dict, gap, output_tiff_shape)\n",
     "\n",
-    "surface_path = f\"E:\\\\scanimage_ophys\\\\data\\\\{session_id}\\\\{session_id}_averaged_surface.tiff\"\n",
+    "surface_path = f\"D:\\\\scanimage_ophys\\\\data\\\\{session_id}\\\\{session_id}_averaged_surface.tiff\"\n",
     "\n",
     "split_surface_meta, surface_averaged = split_surface(surface_path)\n",
     "\n",
@@ -85,7 +82,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.13 ('meso_data3.7')",
    "language": "python",
    "name": "python3"
   },
@@ -99,7 +96,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "62baf763e8897c4eca9b4711175966fd6cdea9cf84ae45375eb11f1a6e0876c2"
+   }
   }
  },
  "nbformat": 4,
