--- a/meso_tools/notebooks/fullfield_stitching.ipynb
+++ b/meso_tools/notebooks/fullfield_stitching.ipynb
@@ -1,38 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as pl\n",
-    "from meso_tools.io_utils import read_si_metadata as get_meta\n",
-    "from meso_tools.io_utils import read_tiff, write_tiff\n",
-    "from meso_tools.stitch_full_field import *\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### edit cell below to have correct session ID"
-   ]
   },
   {
    "cell_type": "code",
@@ -51,7 +22,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as pl\n",
-    "from meso_tools.io_utils import read_si_metadata as get_meta\n",
+    "from meso_tools.io_utils import read_scanimage_metadata as get_meta\n",
     "from meso_tools.io_utils import read_tiff, write_tiff\n",
     "from meso_tools.stitch_full_field import *\n",
     "import sciris as sc"
@@ -63,8 +34,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "session_id = 1223428054\n"
+    "session_id = 1223428054"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### edit cell below to have correct session ID"
    ]
   },
   {
